prototyping soc-provider module home-module vs-service browse-albums-dialog

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SocFileManager</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <base href="/">
+  <title>SocFileManager</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
