--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   <title>SocFileManager</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script type="text/javascript" src="https://vk.com/js/api/openapi.js?146"></script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+<app-root>Loading...</app-root>
 </body>
 </html>
