deployment fixes finish worker service for upload photo task finish tab in-progress

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
-  <title>SocFileManager</title>
+  <title>Social File Manager</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <script type="text/javascript" src="https://vk.com/js/api/openapi.js?146"></script>
 </head>
 <body>
-<app-root>Loading...</app-root>
+<app-root>
+  <div class="loader-wrapper">
+    <div class="sk-folding-cube">
+      <div class="sk-cube1 sk-cube"></div>
+      <div class="sk-cube2 sk-cube"></div>
+      <div class="sk-cube4 sk-cube"></div>
+      <div class="sk-cube3 sk-cube"></div>
+    </div>
+  </div>
+</app-root>
 </body>
 </html>
